# Numerical_Algebra

./: .gitignore  CMakeLists.txt  README.md
hw1/: 1.cpp  2_1.cpp  2_2.cpp  CMakeLists.txt
hw2/: 1.cpp  2.cpp  CMakeLists.txt
hw3/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
hw4/: 1.cpp  2.cpp  CMakeLists.txt
hw5/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
hw6/: 1.cpp  2.cpp  CMakeLists.txt
utils/include/: Cholesky_solver.h  Condition_number.h  Eigen_solver.h  It_Method.h  LU_solver.h  QR_solver.h  Sparse_utils.h  matrix_utils.h
utils/src/: Cholesky_solver.cpp  Condition_number.cpp  Eigen_solver.cpp  It_Method.cpp  LU_solver.cpp  QR_solver.cpp  Sparse_utils.cpp  matrix_utils.cpp
